Добавлена система безопасности и надежности
- Аутентификация в веб-интерфейсе с паролем из env
- Защита всех API endpoints декоратором @login_required
- Страница входа (/login) с формой аутентификации
- Валидация и санитизация входных данных для групп/каналов
- Retry механизм для неудачных публикаций (3 попытки, 5 сек задержка)
- Обновлены тесты для работы с аутентификацией
- Добавлена кнопка выхода в веб-интерфейсе

--- a/env.example
+++ b/env.example
@@ -13,3 +13,6 @@ ADMIN_ID=your_admin_id_here
 
 # Пароль двухфакторной аутентификации (если включена)
 # TELEGRAM_PASSWORD=your_2fa_password
+
+# Пароль для веб-интерфейса (обязательно измените на свой!)
+WEB_PASSWORD=admin
